Upgrade to JDK 21 and add progress monitor